Changelog for getTables.
1.11.3-alpha
- Добавлено событие getTablesLoadGTSConfig для изменения gts-конфига, когда нельзя редактировать исходник.

1.11.2-alpha
- Добавлен тип поля number.
- Добавлен action insert.

1.11.1-alpha
- Исправление getTree.
- Правка верстки.
- Исправлен ckeditor.

1.11.0-alpha
- Доработан getTree.

1.10.1-alpha
- Исправение верстки bootstrap 4.
- Табы в модалке Создать Редактировать.

1.10.0-alpha
- Добавлено getTree.
- getTree. Загрузка таблиц и форм в панель.
- Условия в фильтрах.

1.9.5-alpha
- Добавлено response.data.replace на custom.

1.9.4-alpha
- Добавлено response.data.modal_close на custom.

1.9.3-alpha
- Правка form autocomplect.

1.9.2-alpha
- Вывод данных фильтров в content поля.
- Постобработка данных строки сниппетом.

1.9.1-alpha
- Исправлена ошибка с модалкой.

1.9.0-alpha
- Добавлена сортировка таблиц.

1.8.3-alpha
- Подготовка стилизации модалок.

1.8.2-alpha
- Правка модал title.

1.8.0-        
- Подготовка компонента для стилизации без Bootstrap.
- Добавлена валидация полей на create. Инструкция edit->validate.
- Добавлена подпись наименование таблицы.
- Добавлена проверка выборки для записи в таблицу. Инструкция edit->check='user_id'.

1.7.33-alpha
- Добавлен style для textarea.

1.7.32-alpha
- Добавлен класс canceled для окраски строк.

1.7.31-alpha
- Добавлена возможность редиректа в sets.

1.7.29-alpha
- Исправленно autoselect в getForm.

1.7.28-alpha
- Исправленно sub_where.
- Добавлены стили расцветки таблиц.

1.7.25-alpha
- Добавлено fetchModal2Step.

1.7.24-alpha
- Исправлена инструкция force.

1.7.23-alpha
- Добавлено handleRequestInt.
- Добавлено событие getTablesRunModalTriggers и регистрация триггера regModalTriggers.

1.7.22-alpha
- Инструкция style для ячеек таблицы.

1.7.21-alpha
- Подсказки для ячеек таблицы.

1.7.20-alpha
- исправлен фильтр даты.

1.7.19-alpha
- Проводка пустых дат в доптаблице.

1.7.18-alpha
- Замена датапикера на AirDatepicker.
- Добавлен тип поля datetime.

1.7.17-alpha