@@ -122,8 +122,10 @@
                                 </span>
                             </span>
                             <input type="search" class="form-control get-autocomplect-content" value="{$edit.content}" 
-                            placeholder="{$edit.placeholder}" 
-                            {if $edit.readonly}readonly{/if}/>
+                                {if $edit.content_name}name="{$edit.content_name}" data-field="{$edit.field}"{/if} 
+                                placeholder="{$edit.placeholder}" 
+                                {if $edit.readonly}readonly{/if}
+                            />
                             {if !$edit.readonly}
                                 <div class="input-group-btn">
                                     <button class="btn get-autocomplect-all">
