@@ -13,6 +13,13 @@
                 placeholder="{$filter.edit.placeholder}" class="form-control get-table-filter"/>
             </div>
         </div>
+    {case 'number'}
+        <div class="form-group">
+            <div class="controls">
+                <input type="text" step="1" name="{$filter.edit.field}" value="{$filter.value}" 
+                placeholder="{$filter.edit.placeholder}" class="form-control get-table-filter"/>
+            </div>
+        </div>
     {case 'textarea'}
         <div class="form-group">
             <div class="controls">
